--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://potaaeeto.github.io/NetflixReact/",
   "type": "module",
   "scripts": {
+    "predeploy": "yarn dev",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
