--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://potaaeeto.github.io/NetflixReact/",
   "type": "module",
   "scripts": {
-    "predeploy": "yarn dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
