--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://potaaeeto.github.io/NetflixReact/",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "yarn dev",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
