--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "netflix-react",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://potaaeeto.github.io/NetflixReact/",
   "type": "module",
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
